Changed home page photo and added new portfolios

--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -59,12 +59,12 @@
   <section class="jumbotron text-center">
     <div class="container">
       <h1 class="jumbotron-heading">Hi, I am Nepolean</h1>
-      <p class="lead text-muted">I love to construct websites on the Interwebz and Django is my weapon of choice. "Can we build it? Yes, we can!"</p>
+      <p class="lead text-muted">I love to construct websites on the Interwebz using Django and Flask. "Can we build it? Yes, we can!"</p>
       <p>
         <a href="mailto:nepoleanr.apple@gmail.com" class="btn btn-primary my-2">Email me</a>
         <!-- <a href="#" class="btn btn-secondary my-2">Secondary action</a> -->
       </p>
-      <img src="{% static 'DSC_0099 copy.jpg' %}" height="300" width="200" alt="">
+      <img src="{% static 'forest-sunlight-aerial-view-tree.jpg' %}" height="300" width="500" alt="">
     </div>
   </section>
 
